# nvc-fuzz

./: .gitignore  CMakeLists.txt  abort.patch  crash_dedup.patch  crash_hash.patch  fatal_exit.patch  fuzzer.c  patch.cmake  tester.c  tester.h
.devcontainer/: devcontainer.json
.github/workflows/: get-commit.yaml  libfuzzer.yaml
seed/: ename1.vhd
